[package]
name = "day12"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = {version = "1.10.0", optional = true}
ahash = "0.8.11"
link-cplusplus = { version = "1.0.9", optional = true }

[dev-dependencies]
criterion = "0.5.1"
divan = "0.1.14"

[build-dependencies]
cmake = { version = "0.1.50",  optional = true }

[[bench]]
name = "criterion"
harness = false

[[bench]]
name = "divan"
harness = false

[features]
default = []
swift = ["cmake"] 
cpp = ["cmake", "link-cplusplus"]
par = ["rayon"]